--- a/ponsol2web/templates/ponsol2web/input_protein_id.html
+++ b/ponsol2web/templates/ponsol2web/input_protein_id.html
@@ -13,7 +13,7 @@
         <form id="ponsol_form" action="{% url "ponsol2:predict-ids" %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group col-md-12">
-                <label for="seq">IDs and AASs</label>
+                <label for="seq">ID and amino acid substitution</label>
                 <a id="example_input" href="javascript:set_example()">Example</a>
                 <div class="fix-vertical-center">
                     <div style="padding-left: 0px" class="col-md-8">
@@ -25,7 +25,7 @@
                         </strong>
                     </div>
                     <div class="col-md-3" style="margin-top: auto; margin-bottom: auto;">
-                        <label for="sequenceInputFile">Update File</label>
+                        <label for="sequenceInputFile">Update ID and variation file</label>
                         <input type="file" id="sequenceInputFile" name="sequenceInputFile">
                     </div>
                 </div>
