日志文件命名，uwsgi配置文件

--- a/ponsol2web/templates/ponsol2web/input_protein_id.html
+++ b/ponsol2web/templates/ponsol2web/input_protein_id.html
@@ -35,15 +35,15 @@
                 <div class="col-lg-8">
                     <label> ID Type </label>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 text-capitalize">
                     <label class="radio-inline">
-                        <input type="radio" name="type" id="inlineRadio1" value="gi">GI
+                        <input type="radio" name="type" id="inlineRadio3" value="uniprot id">UniProtKB/Swiss-Prot ID</label>
+                    <label class="radio-inline">
+                        <input type="radio" name="type" id="inlineRadio1" value="gi">Entrez gene ID
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" name="type" id="inlineRadio2" value="ensembl id">Ensemble ID
+                        <input type="radio" name="type" id="inlineRadio2" value="ensembl id">Ensembl ID
                     </label>
-                    <label class="radio-inline">
-                        <input type="radio" name="type" id="inlineRadio3" value="uniprot id">UniProt </label>
                 </div>
             </div>
             <div class="form-group col-md-12">
