--- a/ponsol2web/templates/ponsol2web/input_seq_aa.html
+++ b/ponsol2web/templates/ponsol2web/input_seq_aa.html
@@ -51,7 +51,7 @@
             <div class="form-group col-md-12">
                 <div class="col-md-8" style="padding-left: 0px">
                     <label class="right-align" for="mail">E-mail</label>
-                    <input type="email" name="mail" class="form-control" id="mail" placeholder="Email">
+                    <input type="email" name="mail" class="form-control" id="mail" placeholder="Email" required>
                 </div>
             </div>
             <div class="col-md-8">
