蛋白质全预测功能完成；保存record的方式还是在预测完成后添加。

--- a/ponsol2web/templates/ponsol2web/input_protein.html
+++ b/ponsol2web/templates/ponsol2web/input_protein.html
@@ -75,8 +75,8 @@
         }
         function set_example_id() {
             var seq_input = document.getElementById("input_id")
-            seq_input.value = ">Q5VT03"
-            var seq_kind = document.getElementById("inlineRadio3")
+            seq_input.value = "298119"
+            var seq_kind = document.getElementById("inlineRadio1")
             seq_kind.checked = true;
         }
     </script>
