--- a/ponsol2web/templates/ponsol2web/email/task_detail_for_protein.html
+++ b/ponsol2web/templates/ponsol2web/email/task_detail_for_protein.html
@@ -56,7 +56,7 @@
                 If you find that there is no result or some variation have been missed, it is usually due to an
                 incorrect
                 input format.
-                Please check wheather variation can match corresponding FASTA sequence.
+                Please check whether all variations can be matched to input FASTA sequence.
             </p>
         </div>
     </div>
