--- a/ponsol2web/templates/ponsol2web/email/task_detail_for_protein.html
+++ b/ponsol2web/templates/ponsol2web/email/task_detail_for_protein.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="panel-body">
                         <p>
-                            Protein name: {{ pi.name | shorten_str }};
+                            Protein name: {{ pi.name | shorten_str }};<br>
                             Protein sequence: {{ pi.seq | shorten_str }};
                         </p>
                     </div>
