--- a/ponsol2web/templates/ponsol2web/input_protein.html
+++ b/ponsol2web/templates/ponsol2web/input_protein.html
@@ -4,6 +4,13 @@
     <div class="page-header">
         <h1>Protein Predict</h1>
     </div>
+    <div class="row" style="padding-left: 20px; padding-right: 20px">
+        <p class="lead">
+            Protein predict will predict all the 19 possible single substitutions.
+            Only one protein can be provided at a time.
+            Provide the sequences either in FASTA format or use an ID (GI, Ensemble ID or UniProt).
+        </p>
+    </div>
     <div class="form row">
         {% if error_msg %}
             <div class="col-lg-12">
@@ -17,7 +24,7 @@
                     <div style="padding-left: 0px" class="col-md-6">
                         <label for="seq">FASTA sequence</label>
                         <a id="example_input" href="javascript:set_example_seq()">Example</a>
-                        <textarea class="form-control" rows="10" name="seq" id="seq"></textarea>
+                        <textarea class="form-control" rows="10" name="seq" id="seq" onfocusin="clearIdInput()"></textarea>
                     </div>
                     <div class="col-md-1">
                         <strong>
@@ -30,7 +37,7 @@
                             <a id="example_input" href="javascript:set_example_id()">Example</a>
                             <div class="fix-vertical-center">
                                 <div style="padding-left: 0px" class="col-md-12">
-                                    <input type="text" class="form-control" rows="10" name="input_id" id="input_id"></input>
+                                    <input type="text" class="form-control" rows="10" name="input_id" id="input_id" onfocusin="clearSeqInput()"></input>
                                 </div>
                             </div>
                         </div>
@@ -40,13 +47,13 @@
                             </div>
                             <div class="text-capitalize">
                                 <label class="radio-inline">
-                                    <input type="radio" name="type" id="inlineRadio3" value="uniprot id">UniProtKB/Swiss-Prot
+                                    <input type="radio" name="type" id="inlineRadio3" value="uniprot id" onfocusin="clearSeqInput()">UniProtKB/Swiss-Prot
                                     ID</label>
                                 <label class="radio-inline">
-                                    <input type="radio" name="type" id="inlineRadio1" value="gi">Entrez gene ID
+                                    <input type="radio" name="type" id="inlineRadio1" value="gi" onfocusin="clearSeqInput()">Entrez gene ID
                                 </label>
                                 <label class="radio-inline">
-                                    <input type="radio" name="type" id="inlineRadio2" value="ensembl id">Ensembl ID
+                                    <input type="radio" name="type" id="inlineRadio2" value="ensembl id" onfocusin="clearSeqInput()">Ensembl ID
                                 </label>
                             </div>
                         </div>
@@ -70,14 +77,30 @@
     </div>
     <script type="text/javascript">
         function set_example_seq() {
-            var seq_input = document.getElementById("seq")
-            seq_input.value = ">Example Protein\nSTSYNMDRFINK"
+            var seq_input = document.getElementById("seq");
+            seq_input.value = ">CAA38848.1 beta [Methanothermobacter thermautotrophicus]\nMAKFEDKVDDNSPKVLCESSNQPVKEHS";
+            clearIdInput();
         }
         function set_example_id() {
             var seq_input = document.getElementById("input_id")
             seq_input.value = "298119"
             var seq_kind = document.getElementById("inlineRadio1")
             seq_kind.checked = true;
+            clearSeqInput();
+        }
+        function clearSeqInput(){
+            var txt = document.getElementById("seq");
+            txt.value = "";
+        }
+        function clearIdInput(){
+            var seq_input = document.getElementById("input_id");
+            seq_input.value = "";
+            var seq_kind = document.getElementById("inlineRadio1");
+            seq_kind.checked = false;
+            var seq_kind = document.getElementById("inlineRadio2");
+            seq_kind.checked = false;
+            var seq_kind = document.getElementById("inlineRadio3");
+            seq_kind.checked = false;
         }
     </script>
 {% endblock %}
