--- a/ponsol2web/templates/ponsol2web/input_protein.html
+++ b/ponsol2web/templates/ponsol2web/input_protein.html
@@ -2,11 +2,11 @@
 {% block title %} Predict {% endblock %}
 {% block content %}
     <div class="page-header">
-        <h1>Protein Predict</h1>
+        <h1>Protein Prediction</h1>
     </div>
     <div class="row" style="padding-left: 20px; padding-right: 20px">
         <p class="lead">
-            Protein predict will predict all the 19 possible single substitutions.
+            This routine predicts all the 19 possible single amino acid substitutions.
             Only one protein can be provided at a time.
             Provide the sequences either in FASTA format or use an ID (GI, Ensemble ID or UniProt).
         </p>
