--- a/ponsol2web/templates/ponsol2web/task_detail_for_protein.html
+++ b/ponsol2web/templates/ponsol2web/task_detail_for_protein.html
@@ -23,11 +23,10 @@
                         {% endif %}
                     </div>
                 {% elif task.status == "finished" %}
-                    <div class="" role="alert"><strong>Finished!</strong> This task(id={{ task.id }}) is finished, and
-                        the result is the
-                        followed.
+                    <div class="" role="alert"><strong>Finished!</strong> This task(id={{ task.id }}) is finished,
+                        the results are as follows.
                         {% if task.mail %}
-                            The result will be sent to
+                            The results are also send as e-mail to
                             <ins>{{ task.mail }}</ins>.
                         {% endif %}
 {#                        Running time is from {{ task.start_time }} to {{ task.finish_time }}#}
